# elai_codex

./: .gitignore  .tool-versions  cloudbuild.yaml  docker-tui-rust-nativo.md  fix-cloud-build-permissions.sh  fix-compute-sa-self-actas.sh  flowchart TD.mmd  test-app-server-flow.json  test-app-server-init.json  test-exec-command.json  verify-permissions.sh
codex-rs/wrapper-cloud-run/: .dockerignore  .env.example  .gcloudignore  Cargo.toml  DEPLOY_ELAIHUB.md  DOCKER_BUILD_CHECKLIST.md  Dockerfile  GUIA_COMPLETO_USO.md  INDEX.md  QUICK_START.md  README.md  RESUMO_IMPLEMENTACAO.md  codex-app-server  codex-cloud-client.js  codex_cloud_client.py  config.toml  deploy.sh  test-auth.sh  test-cli.sh  test_admin_nexcode.txt
codex-rs/wrapper-cloud-run/cli/: README.md
codex-rs/wrapper-cloud-run/mcp-servers/pipedrive/: CI_CD_SETUP.md  CLOUD_RUN_DEPLOY.md  Dockerfile  MIGRATION_GUIDE.md  README.md  SESSION_API.md  build-and-deploy.sh  cloudbuild.yaml  example.json  log_config.py  package-lock.json  package.json  proxy-auth.js  pyproject.toml  pytest.ini  server.py  setup-permissions.sh  setup.py  test_sessions.py
codex-rs/wrapper-cloud-run/mcp-servers/pipedrive/PRPs/: base_prp_template.md  configuration_consolidation.md  implementation_report_mcp_tool_improvement.md  test.yaml
codex-rs/wrapper-cloud-run/mcp-servers/pipedrive/ai_docs/: CC_best_practices.md  example_server_readme.md  full_mcp.txt  mcp_example.md  (+10 more)
codex-rs/wrapper-cloud-run/src/: main.rs  process.rs  types.rs
codex-rs/wrapper-cloud-run/src_wrapper_backup/: api.rs  auth.rs  main.rs  process.rs  types.rs
(+195 files in other folders)
